# TurboQuant-v3

./: IMPROVEMENTS.md  LICENSE  NVIDIA  README.md  TurboQuant_v3.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_cuda.py
cuda/: int4_cuda.cpp  int4_cuda_kernel.cuh
cuda/include/: cuda_kernels.h
examples/: TurboQuant_v3.ipynb  TurboQuant_v3_demo.ipynb  __init__.py  │   └── TurboQuant_v3_demo.ipynb
examples /: TurboQuant_v3.ipynb
notebooks/: TurboQuant_v3_Colab.ipynb  TurboQuant_v3_Mistral_Colab.ipynb  TurboQuant_v3_Mistral_Colab2.ipynb  quantize_qwen.ipynb
src/turboquant/: CONTRIBUTING.md  __init__.py  benchmark.py  config.py  core.py  core_optimized.py  cuda_ops.py  hf.py  hf_modules.py  linear.py  quantize.py  quantized_linear.py  torch_compile.py
tests/: __init__.py  test_quantize.py  test_turboquant.py
