[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-v3"
version = "0.3.0"
description = "Ultra-efficient post-training INT4 quantization for LLMs with AWQ, protected FP16 channels, and low-rank SVD correction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kubenew", email = "your.email@example.com"},  # ← Update with real email if desired
]
maintainers = [
    {name = "Kubenew"},
]
keywords = ["llm", "quantization", "int4", "awq", "pytorch", "inference", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy",
    "ruff",
    "pre-commit",
]
cuda = [
    # Add specific CUDA torch if needed (users usually install torch with CUDA separately)
]

[project.urls]
Homepage = "https://github.com/Kubenew/TurboQuant-v3"
Repository = "https://github.com/Kubenew/TurboQuant-v3"
Documentation = "https://github.com/Kubenew/TurboQuant-v3#readme"
"Bug Tracker" = "https://github.com/Kubenew/TurboQuant-v3/issues"

[project.scripts]
# If you want CLI entry points later, add them here

[tool.setuptools]
packages = ["turboquant"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"turboquant" = ["*.py", "*.so"]  # for future CUDA extensions

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
