[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "Ultra-efficient post-training quantization for LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kubenew", email = "kubenew@example.com"}
]
keywords = [
    "quantization",
    "llm",
    "deep-learning",
    "pytorch",
    "transformers",
    "awq",
    "int4",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
hf = [
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]
all = [
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Kubenew/TurboQuant-v3"
Documentation = "https://github.com/Kubenew/TurboQuant-v3#readme"
Repository = "https://github.com/Kubenew/TurboQuant-v3"
Issues = "https://github.com/Kubenew/TurboQuant-v3/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
