[metadata]
name = turboquant-v3
version = attr: turboquant.__version__   # optional: you can define __version__ in src/turboquant/__init__.py

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
install_requires =
    torch>=2.0.0
    transformers>=4.30.0
    numpy>=1.24.0
    tqdm

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    black>=23.0
    isort>=5.0
    mypy
    ruff
    pre-commit

[tool:pytest]
testpaths = tests
python_files = test_*.py

[flake8]
max-line-length = 100
